Use of Java 8 java.nio.file.Files operation